--- a/qml.qrc
+++ b/qml.qrc
@@ -7,6 +7,8 @@
         <file>FinishedPage.qml</file>
         <file>images/laptop.png</file>
         <file>images/logo.png</file>
+        <file>images/dark/logo.svg</file>
+        <file>images/light/logo.svg</file>
         <file>images/check_failed.svg</file>
         <file>images/done.svg</file>
         <file>images/lingmo.png</file>
